--- a/CSS/client.css
+++ b/CSS/client.css
@@ -143,3 +143,11 @@ h2, #todoInput, #logout_btn{
   display: none; /* or visibility: hidden; */
 }
 
+.todo_list_div{
+  height: 100vh;
+    width: 100%;
+
+  background: url("..\IMAGES\to_do_pic.jpeg") no-repeat center center;
+
+  background-size: cover;
+}
