--- a/CSS/client.css
+++ b/CSS/client.css
@@ -63,7 +63,7 @@ h1{
   position: absolute;
   right: 0;
   top: 0;
-  padding: 28px 22px;
+  padding: 21px 22px;
 }
 
 .close-button:hover {
@@ -143,11 +143,32 @@ h2, #todoInput, #logout_btn{
   display: none; /* or visibility: hidden; */
 }
 
-.todo_list_div{
-  height: 100vh;
-    width: 100%;
 
-  background: url("..\IMAGES\to_do_pic.jpeg") no-repeat center center;
+.todo-background {
+  position: relative; /* Ensure relative positioning */
+  overflow: hidden; /* Ensure child elements don't overflow */
+  height: 100vh; /* Set the height to 100% of the viewport height */
 
-  background-size: cover;
+  
 }
+
+.todo-background::before {
+  content: ''; /* Required for pseudo-elements */
+  position: absolute; /* Position the pseudo-element */
+  top: 0; /* Align it to the top of the div */
+  left: 0; /* Align it to the left of the div */
+  width: 100%; /* Cover the entire width of the div */
+  height: 100%;
+  background-image: url("/IMAGES/to_do_pic.jpeg"); /* Replace 'path/to/your/image.jpg' with the actual path to your background image */
+  background-size: cover; /* Ensure the background image covers the entire div */
+  opacity: 0.3; /* Set the opacity for the background only */
+  z-index: -1; /* Ensure the background is behind the content */
+}
+
+.todo-container {
+  position: relative; /* Ensure relative positioning */
+  z-index: 1; /* Ensure the content is above the background */
+  
+}
+
+
